--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -6,31 +6,54 @@
 <script src="/assets/javascripts/dropzone.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="@routes.Application.SearchScript()"></script>
+<!-- Latest Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-<h2>Dodaj własny plik</h2>
+<style>
+body{overflow-y: scroll;}
+</style>
 
 
-<form method="POST" class="dropzone" action="@routes.Application.upload" enctype="multipart/form-data">
+<div class="container">
 
-</form>
-<input type="text" id="search">
+<div class="jumbotron">
+<h2>Wyszukaj</h2>
+	<div id="content1">
+		<div class="input-group">
+		  <input type="text" id="search" class="form-control" placeholder="Search">
+		  <span class="input-group-addon glyphicon glyphicon-search"></span>
+		</div>
 
-<div id="resultDiv" ng-app="" ng-controller="searchController">
-	<ul>
-		<li ng-repeat="result in results track by $index">
-			Plik <a href={{result.link}}>{{result.file}}</a>, waga {{result.size}}kB,
-		</li>
-	</ul>
+
+		<div id="resultDiv" ng-app="" ng-controller="searchController" class="btn-group-vertical" role="group" aria-label="Search Results">
+			<a ng-repeat="result in results track by $index"  href={{result.link}} class="btn btn-default" >
+				<span style="float:left;">Plik {{result.file}}, waga {{result.size}}kB</span>&nbsp;<span style="float:right;" class="glyphicon glyphicon-download"></span>
+			</a>
+		</div>
+	</div>
 </div>
+
+
+<div class="jumbotron">
+	<h2>Dodaj plik</h2>
+	<div id="content2">
+		<form method="POST" class="dropzone" action="@routes.Application.upload" enctype="multipart/form-data">
+		</form>
+	</div>
+</div>
+</div>
+
 
 <script>
 	function searchController($scope){
-		$scope.results=[
+		/*$scope.results=[
 		{file:"a.txt", size:"3", link:"@routes.Application.getFile("a.txt")"},
 		{file:"b.doc", size:"0.5", link:"@routes.Application.getFile("b.doc")"},
 		{file:"c.xml", size:"6", link:"@routes.Application.getFile("c.xml")"},
 		{file:"d.pdf", size:"3", link:"@routes.Application.getFile("d.pdf")"},
-		];
+		];*/
 	}
 </script>
 }
