--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -5,10 +5,26 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+		<meta name="viewport" content="width=device-width, initial-scale=3.0, user-scalable=yes" />
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-		<script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")"></script>
+		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
+		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/dropzone.css">
+		<script src="/assets/javascripts/dropzone.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+		<!-- Latest Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+		<script type="text/javascript" charset="utf-8" src="@routes.Application.SearchScript()"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+
+		<style>
+		body{overflow-y: scroll;}
+		</style>
+
     </head>
     <body>
         @content
