tags now are sent like: .../upload/tag1,tag2 etc tags are received in controller cannot send files without tags (need to give for example "notag" tag

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -41,7 +41,7 @@
 <div class="jumbotron">
 	<h2>Dodaj plik</h2>
 	<div id="content2">
-		<form method="POST" class="dropzone" action="@routes.Application.upload" enctype="multipart/form-data">
+		<form method="POST" class="dropzone" action="@routes.Application.upload("notag")" enctype="multipart/form-data">
 		</form>
 	</div>
 </div>
