--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -41,7 +41,7 @@
 <div class="jumbotron">
 	<h2>Dodaj plik</h2>
 	<div id="content2">
-		<form method="POST" class="dropzone" action="@routes.Application.upload("notag")" enctype="multipart/form-data">
+		<form method="POST" id="notagdz" class="dropzone" action="@routes.Application.upload("notag")" enctype="multipart/form-data">
 		</form>
 	</div>
 </div>
@@ -49,6 +49,17 @@
 
 
 <script>
+var tags = "notag";
+
+	Dropzone.options.notagdz = {
+	  init: function() {
+		this.on("processing", function(file) {
+		  this.options.url = "upload/"+tags;
+		});
+	  }
+	};
+
+
 var commentApp = angular.module('searchRes', []);
 commentApp.filter('unsafe', function($sce) {
     return function(val) {
