--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -6,7 +6,7 @@
 <div class="container">
 
 <div class="jumbotron">
-<h2>Wyszukaj</h2>
+<h2>Search</h2>
 	<div id="content1">
 		<div class="input-group">
 		  <input type="text" id="search" class="form-control" placeholder="Search">
@@ -39,7 +39,7 @@
 
 
 <div class="jumbotron">
-	<h2>Dodaj plik</h2>
+	<h2>Drop files</h2>
 	<div id="content2">
 		<form method="POST" id="notagdz" class="dropzone" action="@routes.Application.upload("notag")" enctype="multipart/form-data">
 		</form>
