--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -9,8 +9,9 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-
-		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/dropzone.css">
+		<link rel="stylesheet" href="/assets/stylesheets/main.css">
+		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/basic.css">
+ 
 		<script src="/assets/javascripts/dropzone.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 		<!-- Latest Bootstrap -->
