--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -11,15 +11,15 @@
 			if(!localStorage["tagID"]=="")
 				tag = localStorage["tagID"];
 			else
-				tag = "#Fejm";
+				tag = "file";
 			if(!localStorage["tagSecond"]=="")	
 				tagSecond = localStorage["tagSecond"];
 			else
-				tagSecond = "#Fejm";
+				tagSecond = "nokia";
 			if(!localStorage["tagThird"]=="")	
 				tagThird = localStorage["tagThird"];
 			else
-				tagThird = "#sięZgadzać";
+				tagThird = "Uczelnia";
 			
 		</script>
 <h2>Search</h2>
