--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -30,10 +30,9 @@
 		</div>
 		
 		<div id="resultDiv" ng-app="searchRes" ng-controller="searchController" class="list-group">
+				
 			<a ng-repeat="result in results track by $index" href={{result.link}} class="list-group-item">
-
-
-				<div class="panel panel-primary">
+				<div class="panel panel-primary">	
 					<div class="panel-heading">
 						<span class="badge" style="float: right;">{{result.size}}kB</span>
 						<h3 class="panel-title">{{result.file}}</h3>
@@ -42,11 +41,13 @@
 						<span style="float:right;" class="glyphicon glyphicon-download"></span>
 						<span ng-bind-html="result.context | unsafe"></span>
 					</div>
-					<div class="panel-footer"><small>{{result.tags}}</small></div>
+					<div class="panel-footer"><small>{{result.tags}}</medium></div>
 				</div>
-
-
+				<div ng-if="$index == 9" <button type="button" class="btn btn-default btn-lg btn-block">Show all result</button>
+					</div>
 			</a>
+						
+			
 		</div>
 	</div>
 </div>
