--- a/DocDB/public/stylesheets/main.css
+++ b/DocDB/public/stylesheets/main.css
@@ -1,15 +1,19 @@
 div #content2{
-margin: 0 auto;
-margin-bottom: 1%;
-background-color: #82B89F;
-text-align: center;  
--webkit-border-radius:20px; 
--moz-border-radius:20px; 
-border-radius:20px;
-font-size: 150%;
+	margin: 0 auto;
+	margin-bottom: 1%;
+	background-color: #82B89F;
+	text-align: center;
+	-webkit-border-radius:20px;
+	-moz-border-radius:20px;
+	border-radius:20px;
+	font-size: 150%;
 }
 
 div #outer{
- display: table;
- text-align: center;
+	display: table;
+	text-align: center;
+}
+ #resultDiv small{
+	margin-right: 4px;
+	cursor: alias;
  }
