Bug fix for download

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -41,8 +41,8 @@
 						</div>
 					</div>
 				</a>
-				<div ng-if="$last == true" >
-					<div id="resCount"> </div><!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+				<div ng-if="$last == true" id="resCount" >{{resultCount}}
+					<!--<div > </div>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 				</div>
 				<div ng-if="$last == true && $index == 9">
 						<button id="newSearch" type="button" onclick="newSearch()" class="btn btn-default btn-lg btn-block">Show all result </button>
