Saving localStorage history

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -1,23 +1,29 @@
 @(message: String)
 
 @main("Welcome to DocDB") {
-
-
 <div class="container">
 
 	<div class="jumbotron">
 		<script>
-				Dropzone.autoDiscover = false;
-				var tag = []
-				for (i = 0; i <= 2; i++) {
-					if(!localStorage[i]=="")
-						tag[i] = localStorage[i];
-					else
-						tag[i] = "file";
-				}
-				
+			 
+	
+			Dropzone.autoDiscover = false;
+			var tag = []
+			for (i = 0; i <= 2; i++) {				 
+				if( typeof localStorage[i] != 'undefined')
+					tag[i] = localStorage[i];
+				else
+					tag[i] = "file";
+				if( typeof localStorage["oldTags"] != 'undefined')
+					addTags(tag[i]);				
+			}
+			
 			$(function() {
-				var availableTags = [localStorage[0], localStorage[1], localStorage[2]];
+				var temp = localStorage["oldTags"];
+				var oldTagsArray = [];
+				var availableTags = [];
+					if(temp != null)
+						availableTags = temp.split(",");
 					$( "#0" ).autocomplete({
 					  source: availableTags
 					});
@@ -89,47 +95,6 @@
 </div>
 
 <script>
-		function checkKey(tagID){
-			if (event.keyCode == 13) {
-				if(tagID == 'link'){
-					handleLink(tagID);
-					return false;
-				} else {
-					changeTag(tagID);
-					return false;
-				}
-			}
-		}
-		function changeTag(tagIDName){
-			var tag = document.getElementById(tagIDName).value;
-			var	tagID = document.getElementById(tagIDName);
-			tagID.value = tag;
-			localStorage[tagIDName] = tag;
-			location.reload();
-		}
-
-		function handleLink(tagIDName){
-			var link = document.getElementById(tagIDName).value;
-			
-			sendLink(link);
-			return false;
-			/*console.log("witam");
-			$.ajax({
-			    url : "upload/",
-			    type: "POST",
-			    data : link,
-			    success: function(data, textStatus, jqXHR)
-			    {
-			        //data - response from server
-			    },
-			    error: function (jqXHR, textStatus, errorThrown)
-			    {
-			 
-			    }
-			});*/
-
-		}
-
 		Dropzone.options.dropzone1 = {
 			dictDefaultMessage: tag[0],
 			init: function() {
