--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -9,9 +9,10 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		
 		<link rel="stylesheet" href="/assets/stylesheets/main.css">
 		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/basic.css">
- 
+		<script src="/assets/javascripts/scripts.js"></script>
 		<script src="/assets/javascripts/dropzone.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 		<!-- Latest Bootstrap -->
@@ -21,7 +22,8 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 		<script type="text/javascript" charset="utf-8" src="@routes.Application.SearchScript()"></script>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 
 		<style>
 		body{overflow-y: scroll;}
